# adaptive-backoff

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: adaptive.rs  backoff.rs  errors.rs  lib.rs
src/lib/: adaptive.rs  backoff.rs  errors.rs  main.rs
