[package]
name = "adaptive_backoff"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"
license = "MIT"
keywords = ["adaptive", "backoff", "rate limit", "throttle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
error-chain = "0.12"

log = "0.4"

[lib]
name = "adaptive_backoff"
path = "src/lib/main.rs"
