[package]
name = "adaptive_backoff"
version = "0.1.0"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"
license = "MIT"
description = "library for intelligently backing off rate limited or fallible resources"
homepage = "https://github.com/brhoades/adaptive-backoff"
repository = "https://github.com/brhoades/adaptive-backoff"
keywords = ["adaptive", "backoff", "ratelimit", "throttle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
anyhow = "1.0"
thiserror = "1.0"

log = "0.4"
pretty_env_logger = "0.3"

[lib]
name = "adaptive_backoff"
path = "src/lib/main.rs"
