[package]
name = "adaptive_backoff"
version = "0.2.1"
authors = ["Billy Rhoades <me@brod.es>"]
edition = "2018"
license = "MIT"
description = "library for intelligently backing off rate limited or fallible resources"
homepage = "https://github.com/brhoades/adaptive-backoff"
repository = "https://github.com/brhoades/adaptive-backoff"
keywords = ["adaptive", "backoff", "ratelimit", "throttle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
log = "0.4"

[lib]
name = "adaptive_backoff"
path = "src/lib.rs"
